# zed_bow

3rd/zed_open_capture/include/zed-open-capture/: videocapture.hpp
settings/: SN34347308.conf  zed_oc_stereo.yaml
src/bag_of_word/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
src/feature_matching/: CMakeLists.txt  orb_matching.cpp
src/zed_capture/: CMakeLists.txt  simple_capture.cpp
